--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: ZingHD
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: 阻止你前进的不是那些你不会的，而是那些一知半解的。
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
