--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: ZingHD
 description: 阻止你前进的不是那些你不会的，而是那些一知半解的。
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/ZingHD/Markdown_picture/master/%E5%A4%B4%E5%83%8F/zinghd.png
 
 #
 # Flags below are optional
